--- a/lib/actify/templates/action_log.rb.tt
+++ b/lib/actify/templates/action_log.rb.tt
@@ -2,5 +2,5 @@ class ActionLog < ApplicationRecord
   belongs_to :actor, class_name: "User"
   belongs_to :actionable, polymorphic: true
 
-  enum status: %i[created aborted finished failed]
+  enum :status, [ :created, :aborted, :finished, :failed ]
 end
